group = 'org.aiknowledge'
version = findProperty('releaseVersion') ?: findProperty('projectVersion') ?: '0.1.5-SNAPSHOT'

subprojects {
    group = rootProject.group
    version = rootProject.version

    apply plugin: 'java-library'
    apply plugin: 'maven-publish'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(17)
        }
        withSourcesJar()
        withJavadocJar()
    }

    sourceSets {
        main {
            java {
                setSrcDirs(['src/main/java'])
                include 'org/**'
            }
        }
        test {
            java {
                setSrcDirs(['src/test/java'])
                include 'org/**'
            }
        }
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
        options.release = 17
    }

    tasks.withType(Test).configureEach {
        useJUnitPlatform()
    }

    dependencies {
        testImplementation 'org.junit.jupiter:junit-jupiter:5.11.4'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }

    def publishedArtifactId = [
        'core': 'ai-knowledge-core',
        'gradle-plugin': 'ai-knowledge-gradle-plugin',
        'maven': 'ai-knowledge-maven-plugin'
    ].get(project.name, project.name)

    publishing {
        publications {
            mavenJava(MavenPublication) {
                from components.java
                artifactId = publishedArtifactId
                pom {
                    name = publishedArtifactId
                    description = 'Deterministic build-integrated knowledge extraction for AI-assisted code understanding.'
                    url = 'https://github.com/carstenartur/ai-knowledge-extractor'
                    licenses {
                        license {
                            name = 'Apache License, Version 2.0'
                            url = 'https://www.apache.org/licenses/LICENSE-2.0.txt'
                        }
                    }
                    scm {
                        connection = 'scm:git:https://github.com/carstenartur/ai-knowledge-extractor.git'
                        developerConnection = 'scm:git:https://github.com/carstenartur/ai-knowledge-extractor.git'
                        url = 'https://github.com/carstenartur/ai-knowledge-extractor'
                    }
                }
            }
        }
        repositories {
            maven {
                name = 'GitHubPackages'
                url = uri('https://maven.pkg.github.com/carstenartur/ai-knowledge-extractor')
                credentials {
                    username = findProperty('gpr.user') ?: System.getenv('USERNAME') ?: System.getenv('GITHUB_ACTOR') ?: ''
                    password = findProperty('gpr.key') ?: System.getenv('TOKEN') ?: System.getenv('GITHUB_TOKEN') ?: ''
                }
            }
        }
    }
}
